# xl-vlms

./: .gitignore  .pre-commit-config.yaml  0_1_5e-05_last_input_average_100_14_llava.pt  LICENSE  README.md  best_model_0_1_5e-05_last_input_average_100_14_llava_ablation.pt  checkout_json_answer_type.py  llava_14_average_adversarial_pope_train_-1.pt  llava_15_last_input_multi_mmsb_train_-1.pt  pyproject.toml
docs/: contributing.md  installation.md  saved_feature_structure.md
playground/: shift_analysis.ipynb  steering_analysis.ipynb  utils.py
src/: analyse_features.py  evaluate_concepts.py  main.py  save_features.py
src/analysis/: __init__.py  cluster_analysis.py  feature_decomposition.py  learnable_model_steering.py  model_steering.py  multimodal_grounding.py  utils.py
src/assets/concepts_ids/: color.pkl  place.pkl  place_long.pkl  sentiment.pkl
src/datasets/: __init__.py  constants.py  image_text_dataset.py
src/examples/: concept_dictionary_evaluation.sh  feature_decomposition.md  feature_decomposition.sh  save_features.sh
src/examples/concept_dictionary/: concept_dictionary_evaluation.sh  feature_decomposition.sh
src/helpers/: arguments.py  logger.py  utils.py
src/metrics/: .nfs000000079fe0bf430006ef86  __init__.py  captioning_metrics.py  clipscore.py  clipscore_overlap.py  dictionary_learning_metrics.py  hallucination_metrics.py  utils.py  vqa_accuracy.py
src/models/: __init__.py  constants.py  idefics2.py  image_text_model.py  llava.py  molmo.py  qwen_vl.py
src/xl_vlm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+35 files in other folders)
