[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "xl-vlm"
version = "1.1"
description = "Analyzing Fine-tuning Representation Shift for Multimodal LLMs Steering"
readme = "README.md"
requires-python = ">=3.9.20"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.3.1", "transformers==4.47.1",
    "accelerate==0.29.3", "scikit-learn==1.5.2",
    "openai-clip==1.0.1", "numpy",
]
